타이틀 애니메이션 적용

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -5,17 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My PORTFOLIO</title>
-    <link rel="stylesheet" href="../CSS/css01.css">
+    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../CSS/animation.css">
 </head>
 <body>
 
     <div id="first">
         <div id="box">
-            <div id="text">
-                <span style="color: rgb(47, 151, 47);">안병훈</span>의 <span style="color: rgb(163, 106, 163);">포트폴리오</span>입니다<br>
-                노력하는 개발자입니다
+            <div id="titlebox">
+                <div id="textbox1">
+                    <div class="text1">
+                        <span style="color: rgb(47, 151, 47);">안병훈</span>의 <span style="color: rgb(163, 106, 163);">포트폴리오</span>입니다<br>
+                    </div>
+                </div>
+                <div id="textbox2">
+                    <div class="text2">
+                        노력하는 개발자입니다
+                    </div>
+                </div>
             </div>
-            <button id="viewBtn">view my work</button>
+            <div id="btnbox">
+                <button id="viewBtn">view my work</button>
+            </div>
          </div>
     </div>
     <div id="header">
