--- a/HTML/main.html
+++ b/HTML/main.html
@@ -59,6 +59,12 @@
             <div id="info"></div>
         </div>
         <div id="skill_box">
+            <div id="skill_info_box">
+                <div id="skill_bookmark">MORE</div>
+                <div id="skill_info">
+                    &nbsp;SKILL을 선택해주세요!!
+                </div>
+            </div>
             <div id="skills">
                 <div id="skill_header">SKILL</div>
                 <ul type="square" id="list">
@@ -70,6 +76,9 @@
                     </li>
                     <li class="lists">
                         <span class="list_name">JS</span>
+                    </li>
+                    <li class="lists">
+                        <span class="list_name">JAVA</span>
                     </li>
                     <li class="lists">
                         <span class="list_name">JSP</span>
@@ -99,6 +108,9 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         Java Script
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        JAVA
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         JSP
