전체적인 디자인 변경

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -55,7 +55,9 @@
         
         <div id="info_box">
             <div id="introduce"></div>
-            <div id="me"></div>
+            <div id="me">
+                <img src="../assets/me.jpg" >
+            </div>
             <div id="info"></div>
         </div>
         <div id="skill_box">
